Add integration tests
- Testing scenario flows:
* AssetListing
* BookingFlow
* UserRegistration